--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+[submodule "lib/exus-build"]
+	path = lib/exus-build
+	url = https://github.com/heavenlyhash/exus-build.git
 [submodule "lib/junit"]
 	path = lib/junit
 	url = https://github.com/mdm-releases/junit-releases.git
